# core-midi-rs

core-midi/: Cargo.toml
core-midi-sys/: Cargo.toml
core-midi-sys/src/: driver.rs  lib.rs  services.rs  setup.rs  thru_connection.rs
core-midi/examples/dump/: Cargo.toml
core-midi/examples/dump/src/: main.rs
core-midi/src/: lib.rs  main.rs  services.rs
core-midi/tests/: smoke.rs
