[package]
name = "core-midi-sys"
version = "0.1.1"
authors = ["David Wood <devel@dtwood.uk>"]
description = "Bindings to Core MIDI for OS X"
license = "MIT / Apache-2.0"
repository = "https://github.com/dtwood/core-midi-rs"
homepage = "https://github.com/dtwood/core-midi-rs"

[dependencies]
core-foundation-sys = "0.2.2"
