[package]
name = "core-midi"
version = "0.1.0"
authors = ["David Wood <devel@dtwood.uk>"]
description = "Bindings to Core MIDI for OS X"
license = "MIT / Apache-2.0"
repository = "https://github.com/dtwood/core-midi-rs"
homepage = "https://github.com/dtwood/core-midi-rs"

[dependencies]
core-midi-sys = "0.1.0"
core-foundation = "0.2.2"
time = "0.1"
